tests/expectations/parser/functions/ident_token_fail.out
Error [EPAR0370047]: expected `import`, `program`, or module item at top level
    --> test:2:1
     |
   2 | 1 main() {}
     | ^
